app/main/default/objects/LocalFlosum__Component__c/LocalFlosum__Component__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Changed_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Committed_On__c</fullName>
        <label>Committed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ApexClass</fullName>
                    <default>true</default>
                    <label>ApexClass</label>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BaseSharingRule</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>CriteriaBasedSharingRule</fullName>
                </value>
                <value>
                    <fullName>CustomApplication</fullName>
                </value>
                <value>
                    <fullName>CustomApplicationComponent</fullName>
                </value>
                <value>
                    <fullName>CustomField</fullName>
                </value>
                <value>
                    <fullName>CustomLabel</fullName>
                </value>
                <value>
                    <fullName>CustomLabels</fullName>
                </value>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>CustomPageWebLink</fullName>
                </value>
                <value>
                    <fullName>CustomPermission</fullName>
                </value>
                <value>
                    <fullName>CustomTab</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>DashboardFolder</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>DocumentFolder</fullName>
                </value>
                <value>
                    <fullName>EmailFolder</fullName>
                </value>
                <value>
                    <fullName>EmailTemplate</fullName>
                </value>
                <value>
                    <fullName>EmailTemplateFolder</fullName>
                </value>
                <value>
                    <fullName>EntitlementProcess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalFlosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Last_Modified_By__c</fullName>
        <label>Committed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Last_Updated_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Version__c</fullName>
        <label>Version</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__isPure__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isPure</label>
        <type>Checkbox</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>LocalFlosum__All</fullName>
        <columns>NAME</columns>
        <columns>LocalFlosum__Component_Name__c</columns>
        <columns>LocalFlosum__Component_Type__c</columns>
        <columns>LocalFlosum__Last_Updated_By__c</columns>
        <columns>LocalFlosum__Changed_On__c</columns>
        <columns>LocalFlosum__Last_Modified_By__c</columns>
        <columns>LocalFlosum__Committed_On__c</columns>
        <columns>LocalFlosum__CRC32__c</columns>
        <columns>LocalFlosum__File_Name__c</columns>
        <columns>LocalFlosum__Version__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>