app/main/default/objects/LocalFlosum__Component__c/fields/LocalFlosum__Committed_On__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Committed_On__c</fullName>
        <label>Committed On</label>
        <type>DateTime</type>
    </fields>
</CustomObject>