app/main/default/objects/LocalFlosum__Component__c/fields/LocalFlosum__Component_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ApexClass</fullName>
                    <default>true</default>
                    <label>ApexClass</label>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BaseSharingRule</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>CriteriaBasedSharingRule</fullName>
                </value>
                <value>
                    <fullName>CustomApplication</fullName>
                </value>
                <value>
                    <fullName>CustomApplicationComponent</fullName>
                </value>
                <value>
                    <fullName>CustomField</fullName>
                </value>
                <value>
                    <fullName>CustomLabel</fullName>
                </value>
                <value>
                    <fullName>CustomLabels</fullName>
                </value>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>CustomPageWebLink</fullName>
                </value>
                <value>
                    <fullName>CustomPermission</fullName>
                </value>
                <value>
                    <fullName>CustomTab</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>DashboardFolder</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>DocumentFolder</fullName>
                </value>
                <value>
                    <fullName>EmailFolder</fullName>
                </value>
                <value>
                    <fullName>EmailTemplate</fullName>
                </value>
                <value>
                    <fullName>EmailTemplateFolder</fullName>
                </value>
                <value>
                    <fullName>EntitlementProcess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>