app/main/default/objects/LocalFlosum__Component__c/fields/LocalFlosum__Last_Modified_By__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Last_Modified_By__c</fullName>
        <label>Committed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>