app/main/default/objects/LocalFlosum__Component__c/fields/LocalFlosum__Version__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Version__c</fullName>
        <label>Version</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>