app/main/default/objects/LocalFlosum__Component__c/listViews/LocalFlosum__All.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>LocalFlosum__All</fullName>
        <columns>NAME</columns>
        <columns>LocalFlosum__Component_Name__c</columns>
        <columns>LocalFlosum__Component_Type__c</columns>
        <columns>LocalFlosum__Last_Updated_By__c</columns>
        <columns>LocalFlosum__Changed_On__c</columns>
        <columns>LocalFlosum__Last_Modified_By__c</columns>
        <columns>LocalFlosum__Committed_On__c</columns>
        <columns>LocalFlosum__CRC32__c</columns>
        <columns>LocalFlosum__File_Name__c</columns>
        <columns>LocalFlosum__Version__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>